--- a/.Travis.yml
+++ b/.Travis.yml
@@ -1,3 +1,3 @@
-language: c++
+language: cpp
 # uncomment and edit the following line if your project needs to run something other than `rake`:
 script: make
